--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "rustmap"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-authors = ["ur mom"]
+authors = ["3xecutablefile"]
 description = "Fast port scanner and exploit finder written in Rust"
 license = "MIT"
+keywords = ["security", "scanner", "network", "exploit", "port-scanner"]
+categories = ["command-line-utilities", "network-programming"]
+repository = "https://github.com/NotSmartMan/RustMap"
+homepage = "https://github.com/NotSmartMan/RustMap"
+documentation = "https://docs.rs/rustmap"
+readme = "README.md"
 
 [dependencies]
 rayon = "1.8"
@@ -14,7 +20,24 @@ serde_json = "1.0"
 roxmltree = "0.19"
 regex = "1.10"
 once_cell = "1.19"
+thiserror = "1.0"
+lazy_static = "1.4"
+num_cpus = "1.16"
+async-trait = "0.1"
+tokio = { version = "1.0", features = ["process", "time", "macros", "rt-multi-thread", "signal"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-appender = "0.2"
+governor = "0.6"
+dashmap = "5.5"
+metrics = "0.22"
+metrics-exporter-prometheus = "0.13"
+chrono = { version = "0.4", features = ["serde"] }
+rand = "0.8"
+
+[dev-dependencies]
+tokio-test = "0.4"
 
 [[bin]]
 name = "rustmap"
-path = "rustmap.rs"
+path = "src/main.rs"
