feat: Fix searchsploit integration with intelligent query filtering
- Fix JSON parsing: Correct field mappings for searchsploit output
- Implement intelligent query filtering: Only search when specific service info available
- Skip generic services like 'http'/'https' without product details
- Display real exploit data instead of thousands of false positives
- Update README.md with new intelligent behavior
- Update version to 1.0.1
- Clean up codebase and remove unused code

Resolves: The way searchsploit takes input was wrong - returning thousands of irrelevant exploits for generic terms

Tested:
- scanme.nmap.org: Apache httpd 2.4.7 → 17 real exploits ✅
- google.com: Generic http/https → 0 exploits (correctly skipped) ✅

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "oxidescanner"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 authors = ["3xecutablefile"]
-description = "Fast port scanner and exploit finder written in Rust"
+description = "Fast port scanner with intelligent exploit discovery - Fixed searchsploit integration"
 license = "MIT"
 keywords = ["security", "scanner", "network", "exploit", "port-scanner"]
 categories = ["command-line-utilities", "network-programming"]
